--- a/public/contact.html
+++ b/public/contact.html
@@ -1,8 +1,8 @@
 <h1>Contact Me</h1>
-<p>Mob: +918422081971</p>
+<p>Mob: +911234567892</p>
 <p>Email: mohanishhchaskar@gmail.com</p>
 <pre>
 Address:
-NL-2, Building no.17, Room no.A-6,
-Saptarshi APT, Sec-3, Nerul
+NL-5, Building no.17, Room no.z-6,
+Raghuni APT, Sec-3, Nerul
 Navi Mumbai, Maharashtra, India</pre>
